@startuml
'https://plantuml.com/class-diagram

' Used to start the application
class InventoryManagementApplication
{
start()
main()
}

' Main controller for using the application, links all classes together
class InventoryController
{
Button addButton
Button clearButton
Button deleteButton
Button confirmButton
Button closeButton
Button editButton

TextField letterField, firstNumberField, secondNumberField, thirdNumberField
TextField priceField
TextArea itemNameArea

MenuItem saveButton
MenuItem loadButton
MenuItem newButton
MenuItem closeAppButton

ItemVerifier itemVerifier()
ListParser listParser()
ListLoader listLoader()

initialize()
addEmptyItem()
attemptCloseApp()
clearItems()
confirmItem()
createNewList()
deleteItems()
editItem()
loadList()
openGithubLink()
saveList()
searchItems()
containsKey()
checkDuplicateSerialNumber()
}

' Holds the state of an inventory item
class InventoryItem
{
String itemName
double itemPrice
String serialNumber

InventoryItem()

getItemName()
getItemPrice()
getSerialNumber()

setItemName()
setItemPrice()
setItemSerialNumber()
}

' verifys that an item meets all of the requirements
class ItemVerifier
{
validateName()
validateSerialNumber()
validateDollarAmount()
validateLetterField()
validateNumberField()
}

' Creates files from current inventory lists
class ListParser
{
TSVHandler tsvHandler()
JSONHandler jsonHandler()
HTMLHandler htmlHandler()

parseAndSaveFile()
}

' Loads previously saved inventory files
class ListLoader
{
TSVHandler tsvHandler()
JSONHandler jsonHandler()
HTMLHandler htmlHandler()

loadListFromFile()
}

' Responsible for all things JSON
class JSONHandler
{
ObjectMapper objectMapper()

createJSONFile()
createListFromJSON()
}

' Responsible for all things HTML
class HTMLHandler
{
createHTMLFile()
createListFromHTML()
}

' Responsible for all things TSV
class TSVHandler
{
createTSVFile()
createFileFromTSV()
}

InventoryManagementApplication <|-- InventoryController
InventoryController <|-- InventoryItem
InventoryController <|-- ItemVerifier
InventoryController <|-- ListParser
InventoryController <|-- ListLoader

ListLoader <|-- JSONHandler
ListParser <|-- JSONHandler

ListLoader <|-- HTMLHandler
ListParser <|-- HTMLHandler

ListLoader <|-- TSVHandler
ListParser <|-- TSVHandler

@enduml